--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "contentful": "^7.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icon": "^1.0.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.0"
